# Senior-Design-Stringless-Violin

./: .gitignore  README.md  a.out  package-lock.json  package.json  testnotes.py  violin
App/: package-lock.json  package.json  server.js  violin_frequencies.txt
App/live/: notes.txt
App/public/presets/: hot-cross-buns.txt  jingle-bells.txt  octaves.txt  preset1.txt  preset2.txt
App/src/: App.css  App.js  Composer.js  FrequencyToNote.js  GenerateMusicXML.js  Home.js  LearningTools.js  Tuner.js  frequencyToNote.js
Headers/: main.h
SensorOutputs/: pressureSensor.c  touchSensor.c
Source/: accelerometer.c  main  main.c  noteConversion.c  output.c  pitch.c  pressureSensor.c  touchSensor.c  violin
Stringless Violin/: CMakeLists.txt
Stringless Violin/main/: CMakeLists.txt  accelerometer.c  audio_driver.c  audio_driver.h  bluetooth_receiver.c  distance_calc.c  distance_calc.h  esp_now_neck_receiver.c  esp_now_neck_receiver.h  esp_now_receiver.c  esp_now_reciever.h  esp_now_sender.h  main.c  main.h  mpu6050.c  mpu6050.h  noteConversion.c  notes.txt  output.c  pressureSensor.c  serial_logger.py  touchSensor.c  touchSensor_task.c
Stringless Violin/main/Stringless Violin/main/: notes.txt
